# content-safety-system

./: .env.example  .gitignore  .pre-commit-config.yaml  =4.5.0  Complete System Architecture.md  Dockerfile  Microservice arch + database schemas + vector memory structure + implementation blueprint.md  README.md  current_faults.md  docker-compose-extended.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-all.ps1  test_event.json
.agent/workflows/: clean_rebuild.md  local_dev.md
docs/: COMPLETE_IMPLEMENTATION_CHECKLIST.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW.md  INDEX.md  MONOREPO_STRUCTURE.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  deployment_guide_services.md
monitoring/: prometheus.yml
scripts/: init_db.sql  setup-local-env.ps1  test_e2e.py
services/action-executor/: Dockerfile
services/action-executor/src/action_executor/: main.py
services/embedding-context/: Dockerfile  requirements.txt
services/embedding-context/scripts/: verify_retrieval.py
services/embedding-context/src/embedding_context/: main.py
services/event-ingestion/: Dockerfile  requirements.txt
services/event-ingestion/src/event_ingestion/: main.py
services/reasoning/: Dockerfile
services/reasoning/src/reasoning/: main.py
services/reporting/: Dockerfile
services/reporting/src/reporting/: main.py
services/risk-screening/: Dockerfile  requirements.txt
services/risk-screening/scripts/: verify_deployment.py
services/risk-screening/src/risk_screening/: main.py
services/risk-screening/src/risk_screening/data/: abusive_patterns.json
services/session-manager/: Dockerfile  pyproject.toml
services/session-manager/src/session_manager/: main.py
shared/: pyproject.toml
shared/safety_system/core/: models.py  shared_models.py
testing/: integration_tests.py
