[project]
name = "safety-system"
version = "0.1.0"
description = "Event Ingestion and Safety System"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aioredis==2.0.1",
    "asyncio==3.4.3",
    "httpx==0.25.1",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.11",
    "alembic==1.12.1",
    "sentence-transformers>=2.3.0",
    "torch>=2.2.0",
    "faiss-cpu>=1.8.0",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "qdrant-client==1.7.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation==0.42b0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-redis==0.42b0",
    "opentelemetry-exporter-otlp==1.21.0",
    "opentelemetry-exporter-prometheus==0.42b0",
    "prometheus-client==0.19.0",
    "python-json-logger==2.0.7",
    "structlog==23.2.0",
    "jaeger-client==4.8.0",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "typer==0.9.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "locust==2.17.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
    "pre-commit==3.5.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
